--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,7 @@ body {
 
 /* FOOTER */
 footer {
-  background: #222;
+  background:#003b6f;
   color: white;
   text-align: center;
   padding: 20px;
