--- a/styles.css
+++ b/styles.css
@@ -176,8 +176,8 @@ body {
 
 /* CTA BANNER */
 .cta-banner {
-  background: #003b6f;
-  color: white;
+  background:#f7f7f7;
+  color:#003b6f;
   padding: 50px 20px;
   text-align: center;
 }
@@ -186,8 +186,8 @@ body {
   display: inline-block;
   margin-top: 15px;
   padding: 12px 20px;
-  background: white;
-  color: #003b6f;
+  background:#003b6f;
+  color: white;
   border-radius: 6px;
   font-weight: bold;
 }
