--- a/quote.css
+++ b/quote.css
@@ -8,7 +8,6 @@
 
 body {
   color: #222;
-  background-color: #f7f9fc;
 }
 
 /* NAVBAR */
@@ -19,7 +18,9 @@ body {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  position: relative;
+  position: fixed;
+  top: 0;
+  width: 100%;  
   z-index: 1000;
 }
 
@@ -30,9 +31,8 @@ body {
 }
 
 .logo img {
-  height: 70px;
+  height: 50px;
   width: auto;
-  max-height: 50px;
 }
 
 .logo-text {
